--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "baseUrl": ".",
     "paths": {
       "~/components/*": ["components/*"],
-      "~/utils/*": ["utils/*"]
+      "~/utils/*": ["utils/*"],
+      "~/theme/*": ["utils/*"]
     },
     "moduleResolution": "node",
     "strict": true,
