--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "date-fns": "^2.16.1",
-    "framer-motion": "^4",
+    "framer-motion": "^4.1.17",
     "modern-normalize": "^1.0.0",
     "next": "^10.0.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-icons": "^4.2.0"
+    "react-elastic-carousel": "^0.11.5",
+    "react-icons": "^4.2.0",
+    "sass": "^1.35.2",
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.17",
