--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^17.0.1",
     "react-elastic-carousel": "^0.11.5",
     "react-icons": "^4.2.0",
+    "react-intersection-observer": "^8.32.0",
     "sass": "^1.35.2",
     "styled-components": "^5.3.0"
   },
