--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^3.1.1",
     "@types/node": "^14.14.17",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
